--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.jar=${dist.dir}/BigJavaLessons.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsoup-1.7.2.jar=lib\\jsoup-1.7.2.jar
 file.reference.ojdbc14.jar=lib\\ojdbc14.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.ojdbc14.jar}
+    ${file.reference.ojdbc14.jar}:\
+    ${file.reference.jsoup-1.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
