--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.jar=${dist.dir}/BigJavaLessons.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.jsoup-1.7.2.jar=lib\\jsoup-1.7.2.jar
 file.reference.ojdbc14.jar=lib\\ojdbc14.jar
 includes=**
@@ -35,7 +36,8 @@ javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.ojdbc14.jar}:\
-    ${file.reference.jsoup-1.7.2.jar}
+    ${file.reference.jsoup-1.7.2.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
